--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "minio>=7.2.20",
+    "pytest>=9.0.1",
     "python-dotenv>=1.2.1",
 ]
