--- a/config/etl_config.yaml
+++ b/config/etl_config.yaml
@@ -1,4 +1,5 @@
 api:
-  base_url: http://api.example.com
+  base_url: https://jsonplaceholder.typicode.com
+  endpoint: posts
   timeout: 30
   retry: 3
